Small fixes for divs on smaller screens

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -14,14 +14,28 @@
    position: absolute;
    top: 0px;
    left: 0px;
-   width: 30%;
+   width: 50%;
    height: 0;
+   overflow: hidden;
    z-index: 99;
    box-sizing: border-box;
    text-align: center;
-   overflow: hidden;
    box-sizing: border-box;
-   transition: height 0.5s;
+   transition: height 1.5s;
+ }
+
+ .top-right-notification {
+   position: absolute;
+   top: 0px;
+   right: 0px;
+   width: 30%;
+   height: 0;
+   overflow: hidden;
+   z-index: 99;
+   box-sizing: border-box;
+   text-align: center;
+   box-sizing: border-box;
+   transition: height 1.5s;
  }
 
  .center-notification-top {
@@ -57,7 +71,6 @@
    z-index: 99;
    box-sizing: border-box;
    text-align: center;
-   overflow: hidden;
    box-sizing: border-box;
    transition: height 0.5s;
  }
@@ -68,16 +81,16 @@
    left: 0px;
    width: 30%;
    height: 0;
+   overflow: hidden;
    z-index: 99;
    box-sizing: border-box;
    text-align: center;
-   overflow: hidden;
    box-sizing: border-box;
    transition: height 0.5s;
  }
 
  .green-notification {
-   height: 20%;
+   height: 100%;
    /*border: 1px solid rgba(36, 241, 6, 0.46);
    background-color: rgba(7, 149, 66, 0.35);
    box-shadow: 0px 0px 2px #259c08;*/
@@ -93,20 +106,9 @@
  }
 
  .red-notification {
-   height: 20%;
+   height: 100%;
    /*border: 1px solid rgba(241, 6, 6, 0.81);
    background-color: rgba(220, 17, 1, 0.16);
    box-shadow: 0px 0px 2px #ff0303;*/
    color: gray;
  }
-
-/*
-unneeded
-////////////////////////////////////////////////////////////////////////////
-
-
-*/
-
-.container {
-  padding-top: 2em;
-}
